fixes wrapping issue

--- a/src/public/stylesheets/chat.scss
+++ b/src/public/stylesheets/chat.scss
@@ -54,10 +54,10 @@ div.message {
   padding: 8px;
 
   div {
-    float: left;
-
+    margin-left: 50px;
+    
     div {
-      float: none;
+      margin-left: 0;
     }
   }
 
